--- a/src/components/CustomProperties/CustomProperties.module.scss
+++ b/src/components/CustomProperties/CustomProperties.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  overflow-x: auto; // If custom properties are too long, scroll
 }
 
 .form-group {
